Add common functionalities jar code Refactor the code add more validation

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
 	<groupId>me.followup</groupId>
 	<artifactId>followupme</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <modules>
+        <module>commons</module>
+    </modules>
+    <packaging>pom</packaging>
 
 	<name>followupme</name>
 	<description>Follow up application</description>
@@ -110,6 +113,16 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
+		</repository>
+		<repository>
+			<id>com.springsource.repository.bundles.release</id>
+			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
+			<url>http://repository.springsource.com/maven/bundles/release</url>
+		</repository>
+		<repository>
+			<id>com.springsource.repository.bundles.external</id>
+			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+			<url>http://repository.springsource.com/maven/bundles/external</url>
 		</repository>
 	</repositories>
 
