--- a/users/pom.xml
+++ b/users/pom.xml
@@ -43,6 +43,12 @@
             <version>2.7.0</version>
         </dependency>
         <dependency>
+            <groupId>me.followup</groupId>
+            <artifactId>commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+
+        </dependency>
+        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
