Add Test classes Test Suite

--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9090
+spring.profiles.active=dev
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:followupmedb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE
